src/test/deca/context/valid/created/miscellaneous/null.deca
// Description :
//		test utilisation null
//
// Resultats :
//		Ok

class B{
B b = null;
B met(B b){
return null;
}
}

{
B b = null;
B vrai_b = new B();
b = vrai_b.met(b);
b = vrai_b.met(null);
b.met(b);
b.met(null);
null.met(b);
null.met(null);
}