src/test/deca/context/invalid/created/object/equals_null_int.deca
// Description :
//    test equals entre un null et un int
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: 
class A{}
{
null a;
int b;
int c = a.equal(b);
}
